tests/cases/should_fail/misc/triple_colon_in_access_name.stderr
error: expected a name here
 --> $DIR/triple_colon_in_access_name.hash:3:7
2 |   
3 |   a::b:::c<int>();
  |         ^ here
